# Minesweeper

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: Globals.h
include/Engine/: Button.h  Image.h  Random.h  Rectangle.h  Text.h  Window.h
include/Minesweeper/: FlagCounter.h  Grid.h  MinesweeperCell.h  NewGameButton.h  UI.h
src/: Image.cpp  MinesweeperCell.cpp
